--- a/articles/b1e7792be705ed.md
+++ b/articles/b1e7792be705ed.md
@@ -10,8 +10,9 @@ published: true
 
 - OS: Linux 6.2.13-arch1-1 x86_64 GNU/Linux
   - `uname -a`
-- Desktop Environment: GNOME(Wayland)
-  - 以下のいずれかの方法から確認
+- Desktop Environment: GNOME 43.5(Wayland)
+  - GNOME: `gnome-shell --version`
+  - Windowing System: 以下のいずれかの方法から確認
     - 環境変数を確認: `echo $XDG_SESSION_TYPE`
     - プロセスリストから確認: `ps aux | grep -i wayland`
 
