--- a/articles/b1e7792be705ed.md
+++ b/articles/b1e7792be705ed.md
@@ -22,9 +22,7 @@ published: true
 
 ## 1. 問題
 
-- Arch LinuxのGNOME環境において、fcitx5 + mozcを使った日本語入力が機能しない問題が起きていた。
-
-- WaylandとGNOME環境では、Xorgの`.xprofile`ファイルに依存していた環境変数やアプリケーションの設定が反映されていなかった
+Arch LinuxのGNOME環境において、fcitx5 + mozcを使った日本語入力が機能しない問題が起きていた。
 
 ## 2. 原因
 
@@ -35,14 +33,12 @@ published: true
   export XMODIFIERS="@im=fcitx"
   ```
   
-- WaylandがXorgとは異なるディスプレイサーバープロトコルを使用しているため発生している
-  - xorg系の場合`.xprofile`や`.xinitrc`などがセッション開始時に読み込まれるが、Waylandでは読み込まれないため環境変数が反映されていなかった
+- WaylandはXorgとは異なるディスプレイサーバープロトコルを使用しているため、Xorgで使用される`.xprofile`や`.xinitrc`等で宣言していた環境変数やアプリケーションの設定が反映されていなかった
 
 ## 3. 解決法
 
 - 解決法の一つとして、GNOME環境でサポートされている`~/.config/environment.d`ディレクトリに環境変数を設定するファイルを作成した
-  - これにより、GNOMEセッション起動時に環境変数が設定され、アプリケーションの設定が反映される
-  - WaylandがXorgとは異なるディスプレイサーバープロトコルを使用しているため発生している
+- これにより、GNOMEセッション起動時に環境変数が設定され、アプリケーションの設定が反映させた
 
 ## 4. 解決法の詳細
 
